src/main/java/com/example/demo/application/global/error/handling/exceptions/InvalidCredentialsException.java
package com.example.demo.application.global.error.handling.exceptions;

public class InvalidCredentialsException extends Exception {

}
